--- a/.env.staging
+++ b/.env.staging
@@ -1,7 +1,7 @@
 VITE_TITLE="Admin Console"
-VITE_BASE_URL="https://dev.urapptech.com/api/v1/admin/"
-VITE_SYSTEM_BASE_URL="https://dev.urapptech.com/api/v1/system/config/"
-VITE_STAFF_APP_BASE_URL="https://dev.urapptech.com/api/v1/staff-app/"
+VITE_BASE_URL="mdaider.urapptech.com/api/admin/"
+VITE_SYSTEM_BASE_URL="mdaider.urapptech.com/api/system/config/"
+VITE_STAFF_APP_BASE_URL="mdaider.urapptech.com/api/staff-app/"
 VITE_GOOGLE_MAP_KEY = "AIzaSyBp7k8-SYDkEkhcGbXQ9f_fAXPXmwmlvUQ"
 
 # CURRENCY
